--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
     "lucide-react": "https://esm.sh/lucide-react@^0.563.0",
     "react/": "https://esm.sh/react@^19.2.4/",
     "react": "https://esm.sh/react@^19.2.4",
-    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.48.1"
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.48.1",
+    "@google/genai": "https://esm.sh/@google/genai@^1.39.0",
+    "types": "https://esm.sh/types@^0.1.1"
   }
 }
 </script>
