--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -33,7 +34,10 @@
     "react": "https://esm.sh/react@^19.2.4",
     "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.48.1",
     "@google/genai": "https://esm.sh/@google/genai@^1.39.0",
-    "types": "https://esm.sh/types@^0.1.1"
+    "types": "https://esm.sh/types@^0.1.1",
+    "docxtemplater": "https://esm.sh/docxtemplater@^3.41.0",
+    "pizzip": "https://esm.sh/pizzip@^3.1.4",
+    "file-saver": "https://esm.sh/file-saver@^2.0.5"
   }
 }
 </script>
