--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="styles.css">
     <!-- Carga global de html2pdf para asegurar compatibilidad total de sus dependencias internas -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
-    <script src="./index.tsx"></script>
     <script>
       tailwind.config = {
         theme: {
@@ -47,5 +46,6 @@
 </head>
 <body>
     <div id="root"></div>
+    <script type="module" src="index.tsx"></script>
 </body>
 </html>
